# bdd_analysis

./: .gitignore  Dockerfile  Dockerfile.mlflow  Dockerfile.rcnn  Dockerfile.yolo  Dockerfile.yoloinf  README.md  config.yaml  docker-compose.yaml  download_frcnn.sh  download_model.py  download_yolov8.sh  inference.py  inference_viz.ipynb  inference_yolo.py  main.py  pyproject.toml  requirements.txt  resnet50_model.py  run_net.py  setup.py  streamlit_app.py  test_mlflow.py  utils.py
configuration/: config_RCNN.yaml  config_yolo.yaml  yolov8_custom_model.yaml
models/yolo/: args.yaml
src/: create_dataloaders.py  trainer.py
src/constants/: __init__.py
src/model/: models.py
src/utils/: Dataloaders.py  common.py  logger.py  metrics.py  run.py  trainer.py
