[project]
name = "bdd-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]
